correct paths and use six to make code compatible between python 2 and 3

--- a/ClassifierComparision.ipynb
+++ b/ClassifierComparision.ipynb
@@ -1,54 +1,10 @@
 {
- "metadata": {
-  "name": "",
-  "signature": "sha256:8d772586ddd021e2f2f28084dbbdd11cc4b1da080d85b034cb9533ab55d6e716"
- },
- "nbformat": 3,
- "nbformat_minor": 0,
  "worksheets": [
   {
    "cells": [
     {
      "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "import sklearn.metrics\n",
-      "from sklearn.naive_bayes import GaussianNB\n",
-      "\n",
-      "from skmultilearn.dataset import Dataset\n",
-      "from skmultilearn.meta.br import BinaryRelevance\n",
-      "from skmultilearn.meta.cc import ClassifierChains\n",
-      "from skmultilearn.lazy.mlknn import KNearestNeighbours\n",
-      "from skmultilearn.lazy.brknn import BinaryRelevanceKNN\n",
-      "\n",
-      "datasets = ['scene','emotions','yeast']\n",
-      "classifiers = [\n",
-      "    BinaryRelevance(GaussianNB()),\n",
-      "    ClassifierChains(GaussianNB()),\n",
-      "    KNearestNeighbours(),\n",
-      "    BinaryRelevanceKNN(extension=BinaryRelevanceKNN.EXTENSION_A),\n",
-      "    BinaryRelevanceKNN(extension=BinaryRelevanceKNN.EXTENSION_B)\n",
-      "]\n",
-      "\n",
-      "for dataset in datasets:\n",
-      "    train = Dataset.load_dataset_dump(\"skmultilearn/data/\"+dataset+\"-test.dump.bz2\")\n",
-      "    test = Dataset.load_dataset_dump(\"skmultilearn/data/\"+dataset+\"-test.dump.bz2\")\n",
-      "    predictions = []\n",
-      "    for classifier in classifiers:\n",
-      "        classifier.fit(train['X'], train['y'])\n",
-      "        predictions.append((classifier.BRIEFNAME, classifier.predict(test['X'])))\n",
-      "    print(\"================= DATASET: %s =================\" % dataset)\n",
-      "    print(\"------- Hamming loss -------\")\n",
-      "    for prediction in predictions:\n",
-      "        print(\"%s: %f\" % (prediction[0], sklearn.metrics.hamming_loss(test['y'], prediction[1])))\n",
-      "    print(\"------- Accuracy score -------\")\n",
-      "    for prediction in predictions:\n",
-      "        print(\"%s: %f\" % (prediction[0], sklearn.metrics.accuracy_score(test['y'], prediction[1])))\n",
-      "    print(\"------- F1 score -------\")\n",
-      "    for prediction in predictions:\n",
-      "        print(\"%s: %f\" % (prediction[0], sklearn.metrics.f1_score(test['y'], prediction[1])))"
-     ],
-     "language": "python",
+     "execution_count": null,
      "metadata": {},
      "outputs": [
       {
@@ -129,18 +85,64 @@
        ]
       }
      ],
+     "input": [
+      "import sklearn.metrics\n",
+      "from sklearn.naive_bayes import GaussianNB\n",
+      "\n",
+      "from skmultilearn.dataset import Dataset\n",
+      "from skmultilearn.problem_transform.br import BinaryRelevance\n",
+      "from skmultilearn.problem_transform.cc import ClassifierChain\n",
+      "from skmultilearn.lazy.mlknn import KNearestNeighbours\n",
+      "from skmultilearn.lazy.brknn import BinaryRelevanceKNN\n",
+      "\n",
+      "datasets = ['scene','emotions','yeast']\n",
+      "classifiers = [\n",
+      "    BinaryRelevance(GaussianNB()),\n",
+      "    ClassifierChain(GaussianNB()),\n",
+      "    KNearestNeighbours(),\n",
+      "    BinaryRelevanceKNN(extension=BinaryRelevanceKNN.EXTENSION_A),\n",
+      "    BinaryRelevanceKNN(extension=BinaryRelevanceKNN.EXTENSION_B)\n",
+      "]\n",
+      "\n",
+      "for dataset in datasets:\n",
+      "    train = Dataset.load_dataset_dump(\"skmultilearn/data/\"+dataset+\"-test.dump.bz2\")\n",
+      "    test = Dataset.load_dataset_dump(\"skmultilearn/data/\"+dataset+\"-test.dump.bz2\")\n",
+      "    predictions = []\n",
+      "    for classifier in classifiers:\n",
+      "        classifier.fit(train['X'], train['y'])\n",
+      "        predictions.append((classifier.BRIEFNAME, classifier.predict(test['X'])))\n",
+      "    print(\"================= DATASET: %s =================\" % dataset)\n",
+      "    print(\"------- Hamming loss -------\")\n",
+      "    for prediction in predictions:\n",
+      "        print(\"%s: %f\" % (prediction[0], sklearn.metrics.hamming_loss(test['y'], prediction[1])))\n",
+      "    print(\"------- Accuracy score -------\")\n",
+      "    for prediction in predictions:\n",
+      "        print(\"%s: %f\" % (prediction[0], sklearn.metrics.accuracy_score(test['y'], prediction[1])))\n",
+      "    print(\"------- F1 score -------\")\n",
+      "    for prediction in predictions:\n",
+      "        print(\"%s: %f\" % (prediction[0], sklearn.metrics.f1_score(test['y'], prediction[1])))"
+     ],
+     "language": "python",
      "prompt_number": 2
     },
     {
      "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
+     "execution_count": null,
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "input": [
+      ""
+     ],
+     "language": "python"
     }
-   ],
-   "metadata": {}
+   ]
   }
- ]
+ ],
+ "cells": [],
+ "metadata": {
+  "name": "",
+  "signature": "sha256:8d772586ddd021e2f2f28084dbbdd11cc4b1da080d85b034cb9533ab55d6e716"
+ },
+ "nbformat": 3,
+ "nbformat_minor": 0
 }
