--- a/ClassifierTesting.ipynb
+++ b/ClassifierTesting.ipynb
@@ -16,9 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from skmultilearn.dataset import Dataset"
@@ -27,13 +25,11 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "train_X, train_y = Dataset.load_arff_to_numpy(filename = \"/home/niedakh/homer-artickle/data/scene-train.arff\", labelcount = 6, endian = \"little\", load_sparse = False)\n",
-    "test_X, test_y = Dataset.load_arff_to_numpy(filename = \"/home/niedakh/homer-artickle/data/scene-test.arff\", labelcount = 6, endian = \"little\", load_sparse = False)\n"
+    "test_X, test_y = Dataset.load_arff_to_numpy(filename = \"/home/niedakh/homer-artickle/data/scene-test.arff\", labelcount = 6, endian = \"little\", load_sparse = False)"
    ]
   },
   {
@@ -47,23 +43,19 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from skmultilearn.label_cooccurence.communities import HierarchicalDistinctCommunitiesClassifier\n",
-    "from skmultilearn.meta.lp import LabelPowerset\n",
+    "from skmultilearn.problem_transform.lp import LabelPowerset\n",
     "from sklearn.svm import SVC\n",
-    "from skmultilearn.meta.rakeld import RakelD\n"
+    "from skmultilearn.ensemble.rakeld import RakelD"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -73,8 +65,8 @@
       ]
      },
      "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "execute_result",
+     "metadata": {}
     }
    ],
    "source": [
@@ -85,9 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "classifier =  RakelD(classifier = LabelPowerset(SVC()), labelset_size = 3)"
@@ -104,9 +94,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -115,8 +103,8 @@
       ]
      },
      "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "execute_result",
+     "metadata": {}
     }
    ],
    "source": [
@@ -128,9 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -139,8 +125,8 @@
       ]
      },
      "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "execute_result",
+     "metadata": {}
     }
    ],
    "source": [
@@ -150,12 +136,10 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "predictions = classifier.predict(test_X)\n"
+    "predictions = classifier.predict(test_X)"
    ]
   },
   {
@@ -169,9 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -180,8 +162,8 @@
       ]
      },
      "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "execute_result",
+     "metadata": {}
     }
    ],
    "source": [
@@ -191,9 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import sklearn.metrics"
@@ -202,9 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -213,8 +191,8 @@
       ]
      },
      "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "execute_result",
+     "metadata": {}
     }
    ],
    "source": [
@@ -224,9 +202,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -235,8 +211,8 @@
       ]
      },
      "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "execute_result",
+     "metadata": {}
     }
    ],
    "source": [
@@ -246,9 +222,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -265,8 +239,8 @@
       ]
      },
      "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "execute_result",
+     "metadata": {}
     }
    ],
    "source": [
@@ -276,9 +250,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -288,8 +260,8 @@
       ]
      },
      "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "execute_result",
+     "metadata": {}
     }
    ],
    "source": [
@@ -299,27 +271,25 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    ""
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 27,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    ""
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 23,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import random"
@@ -328,9 +298,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from skmultilearn.meta.lp import LabelPowerset"
@@ -339,9 +307,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from skmultilearn.meta.rakeld import RakelD"
@@ -350,9 +316,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "classifier = RakelD(LabelPowerset(GaussianNB()), 3)"
@@ -361,9 +325,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -372,8 +334,8 @@
       ]
      },
      "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "execute_result",
+     "metadata": {}
     }
    ],
    "source": [
@@ -383,9 +345,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "a = set(str(sort(x)) for x in classifier.label_sets)"
@@ -394,9 +354,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "b = set(str(sort(x)) for x in classifier.label_sets)"
@@ -405,9 +363,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -416,8 +372,8 @@
       ]
      },
      "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "execute_result",
+     "metadata": {}
     }
    ],
    "source": [
@@ -427,9 +383,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -438,8 +392,8 @@
       ]
      },
      "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "execute_result",
+     "metadata": {}
     }
    ],
    "source": [
@@ -449,9 +403,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -460,8 +412,8 @@
       ]
      },
      "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "execute_result",
+     "metadata": {}
     }
    ],
    "source": [
@@ -471,9 +423,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "d=set(str(sorted(x)) for x in classifier.label_sets)"
@@ -482,9 +432,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -493,8 +441,8 @@
       ]
      },
      "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "execute_result",
+     "metadata": {}
     }
    ],
    "source": [
@@ -504,9 +452,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -515,8 +461,8 @@
       ]
      },
      "execution_count": 45,
-     "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "execute_result",
+     "metadata": {}
     }
    ],
    "source": [
@@ -526,9 +472,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -537,8 +481,8 @@
       ]
      },
      "execution_count": 46,
-     "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "execute_result",
+     "metadata": {}
     }
    ],
    "source": [
@@ -548,9 +492,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import itertools"
@@ -559,9 +501,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -570,18 +510,18 @@
       ]
      },
      "execution_count": 54,
-     "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "execute_result",
+     "metadata": {}
     }
    ],
-   "source": []
+   "source": [
+    ""
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -590,8 +530,8 @@
       ]
      },
      "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "execute_result",
+     "metadata": {}
     }
    ],
    "source": [
@@ -601,22 +541,20 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.cross_validation import KFold "
+    "from sklearn.cross_validation import KFold"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    ""
+   ]
   }
  ],
  "metadata": {
@@ -628,7 +566,7 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 2.0
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
