--- a/DatasetGeneration.ipynb
+++ b/DatasetGeneration.ipynb
@@ -1,27 +1,23 @@
 {
- "metadata": {
-  "name": "",
-  "signature": "sha256:36d70c004b316a2f3c532e0c93f9ecba2e9fa2fed0c9985b68504f549bfdf95b"
- },
- "nbformat": 3,
- "nbformat_minor": 0,
  "worksheets": [
   {
    "cells": [
     {
      "cell_type": "code",
-     "collapsed": false,
+     "execution_count": null,
+     "metadata": {},
+     "outputs": [],
      "input": [
       "from skmultilearn.dataset import Dataset"
      ],
      "language": "python",
-     "metadata": {},
-     "outputs": [],
      "prompt_number": 7
     },
     {
      "cell_type": "code",
-     "collapsed": false,
+     "execution_count": null,
+     "metadata": {},
+     "outputs": [],
      "input": [
       "sets = {\n",
       "    'bibtex': [159, 'i8'],\n",
@@ -38,13 +34,13 @@
       "}"
      ],
      "language": "python",
-     "metadata": {},
-     "outputs": [],
      "prompt_number": 6
     },
     {
      "cell_type": "code",
-     "collapsed": false,
+     "execution_count": null,
+     "metadata": {},
+     "outputs": [],
      "input": [
       "for set_name in sets:\n",
       "    labelcount = sets[set_name][0]\n",
@@ -70,58 +66,50 @@
       "    Dataset.save_dataset_dump(save_file.format(fn['train']['o']), a, b)\n",
       "    \n",
       "    a,b=Dataset.load_arff_to_numpy(file_name.format(fn['test']['m']), labelcount, \"big\", feature_type)\n",
-      "    Dataset.save_dataset_dump(save_file.format(fn['test']['o']), a, b) "
+      "    Dataset.save_dataset_dump(save_file.format(fn['test']['o']), a, b)"
      ],
      "language": "python",
-     "metadata": {},
-     "outputs": [],
      "prompt_number": 11
     },
     {
      "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "np.array([[1, 2, 3],[3,4]])"
-     ],
-     "language": "python",
+     "execution_count": null,
      "metadata": {},
      "outputs": [
       {
-       "metadata": {},
        "output_type": "pyout",
        "prompt_number": 6,
        "text": [
         "array([[1, 2, 3], [3, 4]], dtype=object)"
-       ]
+       ],
+       "metadata": {}
       }
      ],
+     "input": [
+      "np.array([[1, 2, 3],[3,4]])"
+     ],
+     "language": "python",
      "prompt_number": 6
     },
     {
      "cell_type": "code",
-     "collapsed": false,
+     "execution_count": null,
+     "metadata": {},
+     "outputs": [],
      "input": [
       "a = dict()\n",
       "for s in sets:\n",
-      "    a[s] = filter(lambda x: x > 1 and x < sets[s][0], [int(np.ceil(sets[s][0]/10.0)*i) for i in range(1,10)])\n",
-      "    "
+      "    a[s] = filter(lambda x: x > 1 and x < sets[s][0], [int(np.ceil(sets[s][0]/10.0)*i) for i in range(1,10)])"
      ],
      "language": "python",
-     "metadata": {},
-     "outputs": [],
      "prompt_number": 11
     },
     {
      "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "a"
-     ],
-     "language": "python",
+     "execution_count": null,
      "metadata": {},
      "outputs": [
       {
-       "metadata": {},
        "output_type": "pyout",
        "prompt_number": 12,
        "text": [
@@ -135,21 +123,34 @@
         " 'scene': [2, 3, 4, 5],\n",
         " 'tmc2007-500': [3, 6, 9, 12, 15, 18, 21],\n",
         " 'yeast': [2, 4, 6, 8, 10, 12]}"
-       ]
+       ],
+       "metadata": {}
       }
      ],
+     "input": [
+      "a"
+     ],
+     "language": "python",
      "prompt_number": 12
     },
     {
      "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
+     "execution_count": null,
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "input": [
+      ""
+     ],
+     "language": "python"
     }
-   ],
-   "metadata": {}
+   ]
   }
- ]
+ ],
+ "cells": [],
+ "metadata": {
+  "name": "",
+  "signature": "sha256:36d70c004b316a2f3c532e0c93f9ecba2e9fa2fed0c9985b68504f549bfdf95b"
+ },
+ "nbformat": 3,
+ "nbformat_minor": 0
 }
