--- a/MekaTesting.ipynb
+++ b/MekaTesting.ipynb
@@ -1,10 +1,4 @@
 {
- "metadata": {
-  "name": "",
-  "signature": "sha256:389aa97958a341b8b346c070b92ceb5a00de1f8955abca3e8efab0ab46b67e74"
- },
- "nbformat": 3,
- "nbformat_minor": 0,
  "worksheets": [
   {
    "cells": [
@@ -24,24 +18,24 @@
     },
     {
      "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "from skmultilearn.dataset import Dataset"
-     ],
-     "language": "python",
+     "execution_count": null,
      "metadata": {},
      "outputs": [],
+     "input": [
+      "from skmultilearn.dataset import Dataset\n"
+     ],
+     "language": "python",
      "prompt_number": 9
     },
     {
      "cell_type": "code",
-     "collapsed": false,
+     "execution_count": null,
+     "metadata": {},
+     "outputs": [],
      "input": [
       "test_set = Dataset.load_dataset_dump(\"data/scene-test.dump.bz2\")"
      ],
      "language": "python",
-     "metadata": {},
-     "outputs": [],
      "prompt_number": 10
     },
     {
@@ -54,33 +48,29 @@
     },
     {
      "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "from meka.meka import Meka"
-     ],
-     "language": "python",
+     "execution_count": null,
      "metadata": {},
      "outputs": [],
+     "input": [
+      "from skmultilearn.ext.meka import Meka"
+     ],
+     "language": "python",
      "prompt_number": 11
     },
     {
      "cell_type": "code",
-     "collapsed": false,
+     "execution_count": null,
+     "metadata": {},
+     "outputs": [],
      "input": [
       "meka = Meka(\"meka.classifiers.multilabel.LC\", \"weka.classifiers.bayes.NaiveBayes\")"
      ],
      "language": "python",
-     "metadata": {},
-     "outputs": [],
      "prompt_number": 12
     },
     {
      "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "a,b = meka.run(\"/home/niedakh/data/scene/scene-train-meka.arff\", \"/home/niedakh/data/scene/scene-test-meka.arff\")"
-     ],
-     "language": "python",
+     "execution_count": null,
      "metadata": {},
      "outputs": [
       {
@@ -91,6 +81,10 @@
        ]
       }
      ],
+     "input": [
+      "a,b = meka.run(\"/home/niedakh/data/scene/scene-train-meka.arff\", \"/home/niedakh/data/scene/scene-test-meka.arff\")"
+     ],
+     "language": "python",
      "prompt_number": 13
     },
     {
@@ -102,22 +96,22 @@
     },
     {
      "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "b['Classifier_info']"
-     ],
-     "language": "python",
+     "execution_count": null,
      "metadata": {},
      "outputs": [
       {
-       "metadata": {},
        "output_type": "pyout",
        "prompt_number": 15,
        "text": [
         "'K=14,N=1211'"
-       ]
+       ],
+       "metadata": {}
       }
      ],
+     "input": [
+      "b['Classifier_info']"
+     ],
+     "language": "python",
      "prompt_number": 15
     },
     {
@@ -130,77 +124,84 @@
     },
     {
      "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "import sklearn.metrics"
-     ],
-     "language": "python",
+     "execution_count": null,
      "metadata": {},
      "outputs": [],
+     "input": [
+      "import sklearn.metrics\n",
+      "import numpy as np"
+     ],
+     "language": "python",
      "prompt_number": 17
     },
     {
      "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "sklearn.metrics.hamming_loss(test_set['y'],np.array(a))"
-     ],
-     "language": "python",
+     "execution_count": null,
      "metadata": {},
      "outputs": [
       {
-       "metadata": {},
        "output_type": "pyout",
        "prompt_number": 20,
        "text": [
         "0.13851727982162765"
-       ]
+       ],
+       "metadata": {}
       }
      ],
+     "input": [
+      "sklearn.metrics.hamming_loss(test_set['y'],np.array(a))"
+     ],
+     "language": "python",
      "prompt_number": 20
     },
     {
      "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "sklearn.metrics.accuracy_score(test_set['y'],np.array(a))"
-     ],
-     "language": "python",
+     "execution_count": null,
      "metadata": {},
      "outputs": [
       {
-       "metadata": {},
        "output_type": "pyout",
        "prompt_number": 21,
        "text": [
         "0.54515050167224077"
-       ]
+       ],
+       "metadata": {}
       }
      ],
+     "input": [
+      "sklearn.metrics.accuracy_score(test_set['y'],np.array(a))"
+     ],
+     "language": "python",
      "prompt_number": 21
     },
     {
      "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "sklearn.metrics.f1_score(test_set['y'],np.array(a))"
-     ],
-     "language": "python",
+     "execution_count": null,
      "metadata": {},
      "outputs": [
       {
-       "metadata": {},
        "output_type": "pyout",
        "prompt_number": 22,
        "text": [
         "0.62267566475235625"
-       ]
+       ],
+       "metadata": {}
       }
      ],
+     "input": [
+      "sklearn.metrics.f1_score(test_set['y'],np.array(a))"
+     ],
+     "language": "python",
      "prompt_number": 22
     }
-   ],
-   "metadata": {}
+   ]
   }
- ]
+ ],
+ "cells": [],
+ "metadata": {
+  "name": "",
+  "signature": "sha256:389aa97958a341b8b346c070b92ceb5a00de1f8955abca3e8efab0ab46b67e74"
+ },
+ "nbformat": 3,
+ "nbformat_minor": 0
 }
