--- a/tests/BRkNNTesting.ipynb
+++ b/tests/BRkNNTesting.ipynb
@@ -1,28 +1,24 @@
 {
- "metadata": {
-  "name": "",
-  "signature": "sha256:ef6324d881ad2642060c33707cf6664830560b71d434755dfb56cdd95134cf39"
- },
- "nbformat": 3,
- "nbformat_minor": 0,
  "worksheets": [
   {
    "cells": [
     {
      "cell_type": "code",
-     "collapsed": false,
+     "execution_count": null,
+     "metadata": {},
+     "outputs": [],
      "input": [
       "import os\n",
       "os.chdir(os.path.dirname(os.getcwd()))"
      ],
      "language": "python",
-     "metadata": {},
-     "outputs": [],
      "prompt_number": 1
     },
     {
      "cell_type": "code",
-     "collapsed": false,
+     "execution_count": null,
+     "metadata": {},
+     "outputs": [],
      "input": [
       "from skmultilearn.dataset import Dataset\n",
       "from skmultilearn.lazy.brknn import BinaryRelevanceKNN\n",
@@ -36,29 +32,11 @@
       "skml_brknnb_predictions = skml_brknnb.predict(skml_test['X'])"
      ],
      "language": "python",
-     "metadata": {},
-     "outputs": [],
      "prompt_number": 2
     },
     {
      "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "import numpy as np\n",
-      "import sklearn.metrics\n",
-      "print(\"### Predictions equality ###\")\n",
-      "print(np.array_equal(skml_brknna_predictions, skml_brknnb_predictions))\n",
-      "print(\"### Hamming loss ###\")\n",
-      "print(\"BRkNNa: %f\" % sklearn.metrics.hamming_loss(skml_test['y'], skml_brknna_predictions))\n",
-      "print(\"BRkNNb: %f\" % sklearn.metrics.hamming_loss(skml_test['y'], skml_brknnb_predictions))\n",
-      "print(\"### Accuracy score ###\")\n",
-      "print(\"BRkNNa: %f\" % sklearn.metrics.accuracy_score(skml_test['y'], skml_brknna_predictions))\n",
-      "print(\"BRkNNb: %f\" % sklearn.metrics.accuracy_score(skml_test['y'], skml_brknnb_predictions))\n",
-      "print(\"### F1 score ###\")\n",
-      "print(\"BRkNNa: %f\" % sklearn.metrics.f1_score(skml_test['y'], skml_brknna_predictions))\n",
-      "print(\"BRkNNb: %f\" % sklearn.metrics.f1_score(skml_test['y'], skml_brknnb_predictions))"
-     ],
-     "language": "python",
+     "execution_count": null,
      "metadata": {},
      "outputs": [
       {
@@ -79,18 +57,42 @@
        ]
       }
      ],
+     "input": [
+      "import numpy as np\n",
+      "import sklearn.metrics\n",
+      "print(\"### Predictions equality ###\")\n",
+      "print(np.array_equal(skml_brknna_predictions, skml_brknnb_predictions))\n",
+      "print(\"### Hamming loss ###\")\n",
+      "print(\"BRkNNa: %f\" % sklearn.metrics.hamming_loss(skml_test['y'], skml_brknna_predictions))\n",
+      "print(\"BRkNNb: %f\" % sklearn.metrics.hamming_loss(skml_test['y'], skml_brknnb_predictions))\n",
+      "print(\"### Accuracy score ###\")\n",
+      "print(\"BRkNNa: %f\" % sklearn.metrics.accuracy_score(skml_test['y'], skml_brknna_predictions))\n",
+      "print(\"BRkNNb: %f\" % sklearn.metrics.accuracy_score(skml_test['y'], skml_brknnb_predictions))\n",
+      "print(\"### F1 score ###\")\n",
+      "print(\"BRkNNa: %f\" % sklearn.metrics.f1_score(skml_test['y'], skml_brknna_predictions))\n",
+      "print(\"BRkNNb: %f\" % sklearn.metrics.f1_score(skml_test['y'], skml_brknnb_predictions))"
+     ],
+     "language": "python",
      "prompt_number": 3
     },
     {
      "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
+     "execution_count": null,
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "input": [
+      ""
+     ],
+     "language": "python"
     }
-   ],
-   "metadata": {}
+   ]
   }
- ]
+ ],
+ "cells": [],
+ "metadata": {
+  "name": "",
+  "signature": "sha256:ef6324d881ad2642060c33707cf6664830560b71d434755dfb56cdd95134cf39"
+ },
+ "nbformat": 3,
+ "nbformat_minor": 0
 }
