--- a/tests/MLkNNTesting.ipynb
+++ b/tests/MLkNNTesting.ipynb
@@ -1,39 +1,22 @@
 {
- "metadata": {
-  "name": "",
-  "signature": "sha256:68575190f5e51eb5ac1730684940159b2f94b5a5a9e6f5c0dd587dcdb16b7417"
- },
- "nbformat": 3,
- "nbformat_minor": 0,
  "worksheets": [
   {
    "cells": [
     {
      "cell_type": "code",
-     "collapsed": false,
+     "execution_count": null,
+     "metadata": {},
+     "outputs": [],
      "input": [
       "import os\n",
       "os.chdir(os.path.dirname(os.getcwd()))"
      ],
      "language": "python",
-     "metadata": {},
-     "outputs": [],
      "prompt_number": 1
     },
     {
      "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "from meka.meka import Meka\n",
-      "java_path = os.path.join(os.environ['JAVA_HOME'], 'bin', 'java')\n",
-      "meka_path = os.path.join(os.environ['MEKA_HOME'], 'lib', '')\n",
-      "meka_train = os.path.abspath(\"meka/data/scene-train.arff\")\n",
-      "meka_test = os.path.abspath(\"meka/data/scene-test.arff\")\n",
-      "meka_classifier = \"weka.classifiers.bayes.NaiveBayes\"\n",
-      "meka = Meka(\"meka.classifiers.multilabel.MULAN -S MLkNN\", meka_classifier, java_path, meka_path)\n",
-      "meka_predictions, meka_statistics = meka.run(meka_train, meka_test)"
-     ],
-     "language": "python",
+     "execution_count": null,
      "metadata": {},
      "outputs": [
       {
@@ -44,11 +27,24 @@
        ]
       }
      ],
+     "input": [
+      "from skmultilearn.ext.meka import Meka\n",
+      "java_path = os.path.join(os.environ['JAVA_HOME'], 'bin', 'java')\n",
+      "meka_path = os.path.join(os.environ['MEKA_HOME'], 'lib', '')\n",
+      "meka_train = os.path.abspath(\"meka/data/scene-train.arff\")\n",
+      "meka_test = os.path.abspath(\"meka/data/scene-test.arff\")\n",
+      "meka_classifier = \"weka.classifiers.bayes.NaiveBayes\"\n",
+      "meka = Meka(\"meka.classifiers.multilabel.MULAN -S MLkNN\", meka_classifier, java_path, meka_path)\n",
+      "meka_predictions, meka_statistics = meka.run(meka_train, meka_test)"
+     ],
+     "language": "python",
      "prompt_number": 2
     },
     {
      "cell_type": "code",
-     "collapsed": false,
+     "execution_count": null,
+     "metadata": {},
+     "outputs": [],
      "input": [
       "from skmultilearn.dataset import Dataset\n",
       "from skmultilearn.lazy.mlknn import KNearestNeighbours\n",
@@ -59,29 +55,11 @@
       "skml_predictions = skml.predict(skml_test['X'])"
      ],
      "language": "python",
-     "metadata": {},
-     "outputs": [],
      "prompt_number": 3
     },
     {
      "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "import numpy as np\n",
-      "import sklearn.metrics\n",
-      "print(\"### Predictions equality ###\")\n",
-      "print(np.array_equal(np.array(meka_predictions), skml_predictions))\n",
-      "print(\"### Hamming loss ###\")\n",
-      "print(\"SKML: %f\" % sklearn.metrics.hamming_loss(skml_test['y'], skml_predictions))\n",
-      "print(\"MEKA: %f (%s)\" % (sklearn.metrics.hamming_loss(skml_test['y'], np.array(meka_predictions)), meka_statistics['Hammingloss']))\n",
-      "print(\"### Accuracy score ###\")\n",
-      "print(\"SKML: %f\" % sklearn.metrics.accuracy_score(skml_test['y'], skml_predictions))\n",
-      "print(\"MEKA: %f (%s)\" % (sklearn.metrics.accuracy_score(skml_test['y'], np.array(meka_predictions)), meka_statistics['Accuracy']))\n",
-      "print(\"### F1 score ###\")\n",
-      "print(\"SKML: %f\" % sklearn.metrics.f1_score(skml_test['y'], skml_predictions))\n",
-      "print(\"MEKA: %f (%s)\" % (sklearn.metrics.f1_score(skml_test['y'], np.array(meka_predictions)), meka_statistics['F1microavg']))"
-     ],
-     "language": "python",
+     "execution_count": null,
      "metadata": {},
      "outputs": [
       {
@@ -102,18 +80,42 @@
        ]
       }
      ],
+     "input": [
+      "import numpy as np\n",
+      "import sklearn.metrics\n",
+      "print(\"### Predictions equality ###\")\n",
+      "print(np.array_equal(np.array(meka_predictions), skml_predictions))\n",
+      "print(\"### Hamming loss ###\")\n",
+      "print(\"SKML: %f\" % sklearn.metrics.hamming_loss(skml_test['y'], skml_predictions))\n",
+      "print(\"MEKA: %f (%s)\" % (sklearn.metrics.hamming_loss(skml_test['y'], np.array(meka_predictions)), meka_statistics['Hammingloss']))\n",
+      "print(\"### Accuracy score ###\")\n",
+      "print(\"SKML: %f\" % sklearn.metrics.accuracy_score(skml_test['y'], skml_predictions))\n",
+      "print(\"MEKA: %f (%s)\" % (sklearn.metrics.accuracy_score(skml_test['y'], np.array(meka_predictions)), meka_statistics['Accuracy']))\n",
+      "print(\"### F1 score ###\")\n",
+      "print(\"SKML: %f\" % sklearn.metrics.f1_score(skml_test['y'], skml_predictions))\n",
+      "print(\"MEKA: %f (%s)\" % (sklearn.metrics.f1_score(skml_test['y'], np.array(meka_predictions)), meka_statistics['F1microavg']))"
+     ],
+     "language": "python",
      "prompt_number": 5
     },
     {
      "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
+     "execution_count": null,
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "input": [
+      ""
+     ],
+     "language": "python"
     }
-   ],
-   "metadata": {}
+   ]
   }
- ]
+ ],
+ "cells": [],
+ "metadata": {
+  "name": "",
+  "signature": "sha256:68575190f5e51eb5ac1730684940159b2f94b5a5a9e6f5c0dd587dcdb16b7417"
+ },
+ "nbformat": 3,
+ "nbformat_minor": 0
 }
