fix wrong usage of six.print, using from __future__ import print_function now

--- a/MekaTesting.ipynb
+++ b/MekaTesting.ipynb
@@ -22,7 +22,7 @@
      "metadata": {},
      "outputs": [],
      "input": [
-      "from skmultilearn.dataset import Dataset\n"
+      "from skmultilearn.dataset import Dataset"
      ],
      "language": "python",
      "prompt_number": 9
