--- a/tests/RAkELdTesting.ipynb
+++ b/tests/RAkELdTesting.ipynb
@@ -49,7 +49,7 @@
      "input": [
       "from skmultilearn.dataset import Dataset\n",
       "from sklearn.naive_bayes import GaussianNB\n",
-      "from skmultilearn.meta.rakeld import RakelD\n",
+      "from skmultilearn.ensemble.rakeld import RakelD\n",
       "skml_train = Dataset.load_dataset_dump(\"skmultilearn/data/scene-train.dump.bz2\")\n",
       "skml_test = Dataset.load_dataset_dump(\"skmultilearn/data/scene-test.dump.bz2\")\n",
       "skml_classifier = GaussianNB()\n",
