--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,4 +1,14 @@
-scikit-multilearn - 0.0.3 (released 2016-MM-DD)
+scikit-multilearn - 0.0.4 (released 2017-07-04)
+-  *kNN classifiers support sparse matrices properly
+- support for the new model_selection API from scikit-learn
+- extended graph-based label space clusteres to allow taking probability of a label occuring alone into consideration
+- compatible with newest graphtool
+- support the case when meka decides that an observation doesn't have any labels assigned
+- HARAM classifier provided by Fernando Benitez from University of Konstanz
+- predict_proba added to problem transformation classifiers
+- ported to python 3 
+
+scikit-multilearn - 0.0.3 (released 2016-06-03)
 
 - support for new multi-label classification methods:
     - classsifier chains (CC)
